# rzopfli

./: .bumpversion.toml  .gitignore  404.html  BUILD.adoc  CHANGELOG.adoc  CONTRIBUTING.adoc  Cargo.toml  README.md  antora-playbook.yml  build.rs  clippy.toml  index.html  justfile  package-lock.json  package.json  search-index.js  sitemap.xml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml
.github/workflows/: CD.yaml  CI.yaml  dependabot_auto_merge.yaml  deploy.yaml  mirror.yaml
assets/: README.adoc  demo.yaml  generate.bash
book/: authors.html  build.html  changelog.html  contributing.html  index.html  install.html  license.html  usage.html
book/man/man1/: rzopfli.1.html
docs/book/: antora.yml
docs/book/modules/ROOT/: nav.adoc
docs/book/modules/ROOT/pages/: index.adoc  install.adoc  license.adoc  repository.adoc  usage.adoc
docs/book/modules/ROOT/pages/man/man1/: rzopfli.1.adoc
docs/book/supplemental-ui/partials/: header-content.hbs
docs/man/man1/: rzopfli.1.adoc
docs/man/man1/include/: section-copyright.adoc  section-exit-status.adoc  section-reporting-bugs.adoc
src/: app.rs  cli.rs  input.rs  main.rs  output.rs
tests/: format.rs  integration.rs  iteration.rs  log_level.rs  ops.rs
tests/assets/: after-long-help.md  long-version.md
tests/data/compressed/: fox.txt.zst
