# SPDX-FileCopyrightText: 2024 Shun Sakai
#
# SPDX-License-Identifier: Apache-2.0 OR MIT

[package]
name = "rzopfli"
version = "0.1.4"
authors = ["Shun Sakai <sorairolake@protonmail.ch>"]
edition = "2024"
rust-version = "1.85.0"
description = "A lossless data compression tool using Zopfli"
readme = "README.md"
homepage = "https://sorairolake.github.io/rzopfli/"
repository = "https://github.com/sorairolake/rzopfli"
license = "Apache-2.0 OR MIT"
keywords = ["compression", "deflate", "gzip", "zlib", "zopfli"]
categories = ["command-line-utilities", "compression"]
include = ["/LICENSES", "/README.md", "/src"]

[dependencies]
anyhow = "1.0.98"
byte-unit = "5.1.6"
clap = { version = "4.5.39", features = ["derive", "wrap_help"] }
clap_complete = "4.5.50"
clap_complete_nushell = "4.5.7"
log = "0.4.27"
simplelog = "0.12.2"
sysexits = "0.9.0"
zopfli = "0.8.2"

[dev-dependencies]
assert_cmd = "2.0.17"
flate2 = "1.1.2"
predicates = "3.1.3"
tempfile = "3.20.0"

[lints.clippy]
cargo = { level = "warn", priority = -1 }
multiple_crate_versions = "allow"
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

[lints.rust]
missing_debug_implementations = "deny"
rust_2018_idioms = { level = "warn", priority = -1 }
unsafe_code = "forbid"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true
